--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@discordjs/rest": "^0.3.0",
     "chance": "^1.1.8",
     "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
     "node-fetch": "^2.6.7"
   }
 }
