--- a/json/config.json
+++ b/json/config.json
@@ -1,17 +1,17 @@
 {
     "apiServer" : { 
         "devServerDomain" : "http://localhost:4242/",
-        "productionServerDomain" : "https://dawson-rp-api.herokuapp.com/",
+        "productionServerDomain" : "https://<redacted>.herokuapp.com/",
         "passKey" : "joe_mama"
     },
     "bot" : { 
-        "botID" : "961962697702903858",
-        "guildID" : "618748256028983326",
-        "roleID": "962205339728633876"
+        "botID" : "XXXXXXXXXXXX",
+        "guildID" : "XXXXXXXXXXXX",
+        "roleID": "XXXXXXXXXXXX"
     },
     "airdrop" : {
-        "channelID" : "962205038883786772",
-        "debugChannelID" : "970633876147933225",
+        "channelID" : "XXXXXXXXXXXX",
+        "debugChannelID" : "XXXXXXXXXXXX",
         "intervalMs" : 60000,    
         "types" : [
             {
